--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: .
     volumes:
       - .:/app:rw
+    environment:      
+      - "APP_KEY={$APP_KEY}"      
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
     environment:
